workspace_kk/.metadata/.plugins/org.eclipse.cdt.ui/adc.build.log
13:06:15 **** Build of configuration Debug for project adc ****
make -r -j2 all 
Building file: ../src/adc_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -D__USE_CMSIS -DDEBUG -D__CODE_RED -I../cmsis -I../config -I../driver -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/adc_main.d" -MT"src/adc_main.o" -MT"src/adc_main.d" -o "src/adc_main.o" "../src/adc_main.c"
../src/adc_main.c: In function 'main':
../src/adc_main.c:103:112: error: expected statement before ')' token
  if((ADCValue[0] <= (TOP_VCC_ADC_1023 + ADC_TOLERANCE) )&& (ADCValue[0] >= (TOP_VCC_ADC_1023)- ADC_TOLERANCE)) )
                                                                                                                ^
src/subdir.mk:18: recipe for target 'src/adc_main.o' failed
../src/adc_main.c:159:1: error: expected expression before '/' token
 /#define betterAlgo
 ^
../src/adc_main.c:159:2: error: stray '#' in program
 /#define betterAlgo
  ^
../src/adc_main.c:84:11: warning: unused variable 'allow_inc' [-Wunused-variable]
   uint8_t allow_inc = 0;
           ^~~~~~~~~
../src/adc_main.c:73:12: warning: unused variable 'adcValue' [-Wunused-variable]
   uint32_t adcValue = ADCValue[0];
            ^~~~~~~~
make: *** [src/adc_main.o] Error 1

13:06:17 Build Finished (took 1s.241ms)

